<resources>
    <string name="app_name">Arenillas Turístico</string>
    <string name="list_places">sitios</string>
    <string name="splash_image">splashImage</string>
    <string name="hello_blank_fragment">Soy el la vista movil</string>
    <string name="share">Compartir</string>
    <string name="home">Menú</string>
    <string name="content_description_contact">Formulario de contacto</string>
    <string name="button_more_details">Más Información</string>
    <string name="button_go_to_ar">Ver en realidad aumentada</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="retry_again">Reintentar</string>
    <string name="updating">Actualizando la base de datos…</string>
    <string name="downloading">Descangando la base de datos…</string>
    <string name="error">Error obteniendo los datos remotos, compruebe su conexion a internet</string>
    <string name="network">Se necesita una conexion a internet para obtener los datos remotos, habilite su conexion y vuelva abrir la app</string>
    <string name="sync">¡Datos sincronizados!</string>
    <string name="local">Cargando datos guardados localmente…</string>
    <string name="range_description">Rango de visualizacion de marcadores</string>
    <string name="image_full_screen_description">Imagen en tamaño grande</string>
    <string name="back_description">Boton de regreso a galeria</string>
    <string name="name_user_hint">Nombre</string>
    <string name="user_email_hint">Correo electrónico</string>
    <string name="user_help_hint">¿Cómo puedo ayudarte?</string>
    <string name="range_place">Lugares a: %d%s del usuario</string>
    <string name="gallery_description">Galería de imagenes de todos los lugares agregados</string>
    <string name="name_user">Opcional</string>
    <string name="message_user">*Requerido</string>
    <string name="send_email">O escribirme a:</string>
    <string name="my_email">angelsuriaga@hotmail.com</string>
    <string name="message_field_empty">Rellene los campos requeridos</string>
    <string name="message_field_send">Mensaje enviado con ID: %s, recibirá una respuesta pronto</string>
    <string name="message_field_failure">Error al enviar su mensaje: %s</string>
    <string name="no_network_message">Se necesita una conexión a internet para enviar su mensaje</string>
    <string name="email_choice">Seleccione su app de email:</string>
    <string name="place_undetected">Buscando lugares cercanos al usuario…</string>
    <string name="place_detected">Lugar encontrado: %s</string>
    <string name="max_distance_augmented_reality">15000</string>
    <string name="user_out_of_city">Fuera de la ciudad</string>
    <string name="gps_is_required">GPS desactivado</string>
    <string name="gps_context_augmented_reality">Se necesitan los datos que proporciona el GPS para usar la realidad aumentada, ya que los objetos geolocalizados necesitan conocer su ubicación.\n¿Desea activar el GPS?</string>
    <string name="center_city_latitude">-3.5560868218088775</string>
    <string name="center_city_longitude">-80.06484580379286</string>
    <string name="city_name_provider">Arenillas</string>
    <string name="augmented_reality_context">La experiencia de realidad aumentada solo está disponible si el usuario se encuentra dentro del área del canton Arenillas</string>

    <!-- Title for buttons main menu -->
    <string name="map_of_places">MAPA DE SITIOS</string>
    <string name="list_of_places">LISTA DE SITIOS</string>
    <string name="gallery">GALERÍA</string>
    <string name="contact">CONTACTO</string>
    <string name="augmented_reality">REALIDAD AUMENTADA</string>

    <!-- Title for labels fragments -->
    <string name="title_menu">Menú</string>
    <string name="title_category">Categorías</string>
    <string name="title_places">Lugares</string>
    <string name="title_detail">Detalles</string>
    <string name="title_description">Descripción</string>
    <string name="title_location">Ubicación</string>
    <string name="title_address">Dirección</string>
    <string name="title_map">Mapa</string>
    <string name="title_gallery">Galería de fotos</string>
    <string name="title_augmented_reality">Realidad Aumentada</string>
    <string name="title_full_screen">Imagen</string>
    <string name="title_contact">Contáctanos</string>

    <!-- Title categories -->
    <string name="parks">Parque</string>
    <string name="history">Histórico</string>
    <string name="nature">Naturaleza</string>
    <string name="sports">Deportivo</string>
    <string name="lodging">Hospedaje</string>
    <string name="entertainment">Entretenimiento</string>
    <string name="all">Todos</string>

    <string name="body_example">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="my_location">Mi Ubicación</string>
    <string name="filter">Filtrar</string>
    <string name="category_select">Seleccione una categoría</string>

    <!-- Permissions titles location-->
    <string name="msg_api_31">Para mostrar su ubicación necesita seleccionar la opcion "Precisa" a continuación</string>
    <string name="all_granted_location">Permiso de ubicación aceptado</string>
    <string name="rationale_permissions_location">El permiso de ubicación es necesario para mostrar la ubicación del usuario.\n\n¿Desea intentarlo de nuevo?</string>
    <string name="permission_location_denied_permanently">Permiso de ubicación fue denegado permanentemente.\nPara obtener la ubicación necesita activar el permiso manualmente en:\n* Permisos de la aplicación o Accesos\n* Ubicación\n* Permitir\n\n¿Desea intentarlo?</string>
    <string name="permissions_location_required">Permiso de Ubicación</string>
    <string name="gps_required_location">Se necesitan los datos que proporciona el GPS para mostrar su ubicación en el mapa.\n¿Desea activar el GPS?</string>

    <!-- Permission titles augmented reality-->
    <string name="all_granted_augmented_reality">Permiso de cámara y ubicación aceptado</string>
    <string name="rationale_permissions_augmented_reality">El permiso de cámara y/o ubicación es necesario para visualizar y posicionar los lugares por medio de la realidad aumentada.\n\n¿Desea intentarlo de nuevo?</string>
    <string name="permissions_augmented_reality_required">Permiso de Cámara y Ubicación</string>
    <string name="permission_augmented_reality_denied_permanently">El permiso de cámara y/o ubicación fue denegado permanentemente.\nPara ver la realidad aumentada necesita activar los permiso manualmente en:\n* Permisos de la aplicación o Accesos\n* Seleccione Ubicación/Cámara o ambos\n* Permitir\n\n¿Desea intentarlo?</string>
    <string name="send_user_message">ENVIAR</string>

</resources>