<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.aesuriagasalazar.arenillasturismo.viewmodel.MapListViewModel" />

        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.map.FragmentMapList">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonListOnAr"
            style="@style/ButtonArStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/button_go_to_ar"
            app:layout_constraintBottom_toTopOf="@+id/mapViewList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.mapbox.maps.MapView
            android:id="@+id/mapViewList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonListOnAr">

        </com.mapbox.maps.MapView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/userLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/my_location"
            app:backgroundTint="?attr/colorSecondary"
            app:elevation="8dp"
            android:onClick="@{() -> viewModel.userLocation()}"
            app:layout_constraintBottom_toTopOf="@+id/cardName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.98"
            app:srcCompat="@drawable/icon_my_location_24"
            app:tint="?attr/colorOnSecondary" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="@{viewModel.placeSelected == null ? View.GONE : View.VISIBLE}"
            app:cardBackgroundColor="?attr/colorSecondary"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="@id/mapViewList"
            app:layout_constraintEnd_toEndOf="@id/mapViewList"
            app:layout_constraintStart_toStartOf="@id/mapViewList"
            app:layout_constraintTop_toTopOf="@+id/mapViewList"
            app:layout_constraintVertical_bias="0.98">

            <TextView
                android:id="@+id/placeSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@{viewModel.placeSelected.place.nombre}"
                android:textAlignment="center"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/app_name" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loading_data"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.loadingData ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/mapViewList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.99"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mapViewList"
            app:layout_constraintVertical_bias="0.01">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_street"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.layerMapStreet()}"
                app:backgroundTint="@color/primaryColor"
                app:icon="@drawable/icon_map_pred_24"
                app:iconSize="25dp"
                app:iconTint="?attr/colorOnSecondary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_satellite"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.layerMapSatellite()}"
                app:backgroundTint="@color/primaryColor"
                app:icon="@drawable/icon_satellite_24"
                app:iconSize="25dp"
                app:iconTint="?attr/colorOnSecondary" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>